Fix hamburger menu on mobile, remove Thingiverse

--- a/themes/pelican-bootstrap3-thelab/static/css/style.css
+++ b/themes/pelican-bootstrap3-thelab/static/css/style.css
@@ -258,10 +258,14 @@ figure.floatcenter, .align-center {
 
 
 body { font-family:'Roboto Slab'; font-size:16px; letter-spacing:0.3px; background-color:#e7eebd; }
-.navbar { background-color:#bfca87; border-color:#9daa5b; }
+.navbar { background-color:#bfca87; border-color:#9daa5b;}
 .navbar .navbar-nav>li>a { color:rgb(51,51,51); }
 .navbar .navbar-right>li>a { font-size:1.4em; }
-.navbar-brand { padding-top:19px; padding-bottom:0; }
+.navbar-brand { padding-top:19px; padding-bottom:19px;}
+
+@media (max-width:767px) {
+    .navbar-collapse { padding-top: 22px; }
+}
 
 .text-black { color:#000000; }
 .text-magenta { color:#6c2940; }
